--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@prisma/client": "^4.15.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^2.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express": "^5.2.1",
     "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
     "nest-access-control": "^2.2.0",
